# react-native-rep-counter

./: .gitignore  .watchmanconfig  AGENTS.md  NitroRepCounter.podspec  README.md  nitro.json  package-lock.json  package.json  tsconfig.json
android/: CMakeLists.txt  build-rust-android.sh  build.gradle  fix-prefab.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/repcounter/: HybridRepCounter.kt  NitroRepCounterPackage.kt
cpp/: HybridRepCounter.cpp  HybridRepCounter.hpp  NitroRepCounterRegistration.cpp  NitroRepCounterRegistration.hpp
cpp/rust/: RepCounterRustBridge.cpp  RepCounterRustBridge.hpp
example/: App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json  react-native.config.js  types.d.ts
example/__tests__/: App.test.tsx
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/repcounterexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/RepCounterExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/RepCounterExample.xcodeproj/: project.pbxproj
example/ios/RepCounterExample.xcodeproj/xcshareddata/xcschemes/: RepCounterExample.xcscheme
rust/: Cargo.toml
rust/src/: c_api.h  ffi.rs  lib.rs
src/: index.ts  repCounter.ts
src/specs/: RepCounter.nitro.ts
